syntax = "proto3";

service PostService {
  rpc GetAllPost (Empty) returns (PostList) {}
  rpc GetPost (PostId) returns (Post) {}
  rpc AddPost (Post) returns (Post) {}
  rpc DeletePost (PostId) returns (Empty) {}
  rpc EditPost (Post) returns (Post) {}
  rpc ArrayPost (PostList) returns (Empty){}
}

message Empty {}

message Post {
  string id = 1;
  string title = 2;
  string body = 3;
}

message PostList {
  repeated Post post = 1;
}

message PostId{
  string id = 1;
}